--- a/src/assets/css/shubham.css
+++ b/src/assets/css/shubham.css
@@ -9,6 +9,9 @@ body {
     background-attachment: fixed;
     background-size: cover;
 }
+.m0 {
+    margin: 0;
+}
 .centered {
     text-align: center;
 }
@@ -21,10 +24,11 @@ body {
     backdrop-filter: blur(5px);
     max-width: 80rem;
 }
-.pr_container > h1 {
-    margin-bottom: 2em;
+.pr_container h1 {
+    color: antiquewhite;
 }
 .pr_mockuplist {
+    padding: 30px 0;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -56,4 +60,121 @@ body {
     text-align: center;
     margin: 10px;
     color: #000938;
+}
+
+/* Mockup editor */
+.pr_mockup_editor {
+    padding: 30px 0;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1.5fr 1fr;
+    gap: 20px;
+}
+.pr_live_mockup_preview img {
+    width: 100%;
+    border-radius: 2px;
+    box-shadow: -15px -15px 20px rgba(255, 255, 255, 0.2),
+        15px 15px 20px rgba(0, 0, 0, 0.5);
+}
+.pr_badge {
+    font-family: monospace;
+    background: transparent;
+    padding: 5px 10px;
+    border-radius: 10px;
+    color: #fff;
+    font-weight: normal;
+    margin-left: 10px;
+    box-shadow: 0 0 5px aquamarine;
+    font-size: 14px;
+}
+
+.pr_layer_list {
+    color: white;
+    padding-left: 2em;
+}
+.pr_layer_info .pr_layer_title {
+    font-weight: normal;
+    margin-bottom: 25px;
+}
+button {
+    font-size: 1em;
+    text-transform: uppercase;
+    border: none;
+    padding: 15px;
+    cursor: pointer;
+    border-radius: 2px;
+    outline: none;
+    box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.2),
+        -5px -5px 10px rgba(0, 0, 0, 0.2);
+    background: #e91e63;
+    font-weight: bold;
+    color: white;
+    transition: 0.1s;
+}
+button:hover {
+    box-shadow: none;
+}
+.pr_layer_info .pr_layer_change button {
+    width: 80%;
+}
+.pr_btn_second {
+    color: #e91e63;
+    background-color: white;
+    margin-right: 30px;
+}
+.pr_popup_wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    padding: 2em;
+    box-sizing: border-box;
+}
+.pr_popup_main {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 5fr 1fr;
+    background: #fff;
+    max-width: 80%;
+    margin: 0 auto;
+    border-radius: 2px;
+    padding: 30px;
+}
+.pr_popup_main.pr_crop_preview {
+    grid-template-rows: unset;
+}
+.pr_cropper_parent {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 80%;
+    margin: 0 auto;
+}
+.pr_modal_heading {
+    text-align: center;
+    color: #000938;
+    font-weight: normal;
+}
+.pr_modal_action_btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pr_cropped_preview {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+    text-align: center;
+}
+.pr_cropped_preview img {
+    max-width: 80%;
+    max-height: 50vh;
+    justify-self: center;
+    border-radius: 2px;
+    box-shadow: 0 0 20px darkgrey;
 }
